--- a/home.html
+++ b/home.html
@@ -16,7 +16,8 @@
         </div>
     </p>
     <h1>MARS</h1>
-    <h3>Home</h3>
-    <img src="img/marsimg.png" alt="mars">
+    <img src="img/mars-home.png" alt="mars" id="marsimg">
+    <p>Did you know? <span>. . . .</span></p>
+    <script src="script.js"></script>
 </body>
 </html>
