--- a/quiz.html
+++ b/quiz.html
@@ -19,8 +19,8 @@
         <h1>MARS</h1>
         <h3>Quiz:</h3>
         <p>Q1: How many moons does mars have?</p>
-        <p class="firstQuestions"><button>1</button> <button>2</button></p>
-        <p><button>3</button> <button>4</button></p>
+        <p class="firstQuestions"><button id="a1">1</button> <button id="a2">2</button></p>
+        <p><button id="a3">3</button> <button id="a4">4</button></p>
     </div>
 </body>
 </html>
