--- a/about.html
+++ b/about.html
@@ -18,6 +18,9 @@
     <div id="body">
         <h1>MARS</h1>
         <h3>About mars:</h3>
+        <p>
+            Mars is the fourth furthest planet from the sun in the solar system  
+        </p>
     </div>
 </body>
 </html>
