--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     </p>
     <h1>MARS</h1>
     <img src="img/mars-home.png" alt="mars" id="marsimg">
-    <p>Did you know? <span>. . . .</span></p>
+    <p id="didYouKnow">Did you know? <em><span id="randFact">. . . .</span></em></p>
     <script src="script.js"></script>
 </body>
 </html>
