--- a/quiz.html
+++ b/quiz.html
@@ -19,14 +19,23 @@
         <h1>MARS</h1>
         <h3>Quiz:</h3>
         <p class="quiz">Q1: How many moons does mars have?</p>
-        <p><input type="number" id="a1"></p>
+        <p><input type="number" id="a1" value="0" min="0"></p>
 
-        <p class="quiz"> Q2: How long does a Mars year last (in earth-days)</p>
-        <p><input type="number" id="a2"></p>
+        <p class="quiz"> Q2: How long does a Mars year last (in Earth days)?</p>
+        <p><input type="number" id="a2" value="0" min="0"></p>
 
+        <p class="quiz"> Q3: What is the gravity on Mars? (round to nearest m/s^2) </p>
+        <p><input type="number" id="a3" value="0" min="0"></p>
+
+        <p class="quiz">Q4: What is another name people use for the planet Mars?</p>
+        <p><input type="text" id="a4"></p>
+
+        <p class="quiz">Q5: How much longer is a Mars day than a day on Earth? (mins)</p>
+        <p><input type="number" id="a5"></p>
+        
         <button id="submitBtn">Submit answers</button>
         <p>Score/2</p>
     </div>
-    <script src="script.js"></script>
+    <script src="quiz-script.js"></script>
 </body>
 </html>
