--- a/quiz.html
+++ b/quiz.html
@@ -35,6 +35,7 @@
         
         <button id="submitBtn">Submit</button>
         <p id="result"><span id="score">--</span>/5 (<span id="percentage">--</span>%)</p>
+        <p id="encouragement"></p>
     </div>
     <script src="quiz-script.js"></script>
 </body>
